--- a/package.json
+++ b/package.json
@@ -66,11 +66,12 @@
     "apexcharts": "^3.41.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "date-fns": "^4.1.0",
     "fs-extra": "^11.2.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "oidc-client-ts": "^2.2.5",
     "path": "^0.12.7",
     "react": "^17.0.0",
